# hydro

./: .gitignore  README.md  makefile  pyproject.toml
docs/: architecture.md
src/hydro/: logging.py  main.py
src/hydro-rs/: Cargo.toml  pyproject.toml
src/hydro-rs/hydro_rs/: __init__.py  __init__.pyi
src/hydro-rs/hydro_rs/pet/: __init__.pyi  oudin.pyi
src/hydro-rs/hydro_rs/snow/: __init__.pyi  cemaneige.pyi
src/hydro-rs/python/hydro_rs/: __init__.py  __init__.pyi  calibration.pyi  climate.pyi  metrics.pyi  model.pyi
src/hydro-rs/python/hydro_rs/calibration/: sce.pyi
src/hydro-rs/python/hydro_rs/climate/: __init__.pyi  bucket.pyi
src/hydro-rs/python/hydro_rs/pet/: __init__.pyi  oudin.pyi
src/hydro-rs/python/hydro_rs/snow/: __init__.pyi  cemaneige.pyi
src/hydro-rs/src/: lib.rs  metrics.rs  model.rs  utils.rs
src/hydro-rs/src/calibration/: mod.rs  sce.rs  sce_v1.rs  utils.rs
src/hydro-rs/src/climate/: bucket.rs  gr4j.rs  mod.rs  utils.rs
src/hydro-rs/src/pet/: mod.rs  oudin.rs
src/hydro-rs/src/snow/: cemaneige.rs  mod.rs  temperature_gradient.txt
src/hydro/api/: api.py  calibration.py  data.py  map.py  station.py  utils.py
src/hydro/data/: __init__.py  calibration.py  climate.py  data.py  hydro.py  precipitation.py  utils.py  weather.py
src/hydro/data/climate/: __init__.py  climate.py  day_median.py  gr4j.py
src/hydro/data/snow/: __init__.py  cemaneige.py  snow.py
src/hydro/utils/: data.py  paths.py
src/static/: index.html
src/static/scripts/: calibration.js  data.js  index.js  notifications.js  settings.js  station.js  utils.js
src/static/scripts/libraries/: d3.js
src/static/scripts/utils/: elements.js  listeners.js  misc.js  ws.js
src/static/styles/: calibration.css  data.css  elements.css  index.css  notifications.css  settings.css  station.css  template.css
src/static/styles/libraries/: d3.js  leaflet.js
