[project]
name = "hydro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.36.1",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]

[build-system]
requires = ["uv_build>=0.8.4"]
build-backend = "uv_build"

[project.scripts]
hydro = "hydro.main:run_server"
h = "hydro.main:run_server"

[tool.black]
line_length = 79
target-version = ['py313']

[tool.isort]
profile = "black"
src_paths = ["src"]
